--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | WebXR_Test_AR</title>
+    <title>Unity WebGL Player | DePantherWebXRTest</title>
     <meta name="description" content="">
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
@@ -24,7 +24,7 @@
         <button id="entervr" value="Enter VR" disabled>VR</button>
         <button id="enterar" value="Enter AR" disabled>AR</button>
         <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
-        <div id="unity-build-title">WebXR_Test_AR</div>
+        <div id="unity-build-title">DePantherWebXRTest</div>
       </div>
     </div>
     <script>
@@ -36,8 +36,8 @@
         codeUrl: buildUrl + "/BuildOutput.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "WebXR_Test_AR",
-        productVersion: "1.0.0",
+        productName: "DePantherWebXRTest",
+        productVersion: "0.1.0",
       };
 
       var container = document.querySelector("#unity-container");
