--- a/index.html
+++ b/index.html
@@ -7,23 +7,11 @@
     <meta name="description" content="">
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: transparent;
-      }
-      canvas#unity-canvas {
-        background-color: transparent !important;
-      }
-    </style>
   </head>
   <body>
     <div id="unity-container">
       <div id="unity-canvas-container">
-        <!-- Transparent canvas -->
-        <canvas id="unity-canvas" style="width: 100%; height: 100%; background-color: transparent;"></canvas>
+        <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
       </div>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
@@ -39,15 +27,6 @@
         <div id="unity-build-title">DePantherWebXRTest</div>
       </div>
     </div>
-
-    <!--AR.js Scene-->
-    <a-scene embedded arjs>
-      <a-marker type="pattern" url="markers/pattern-Test.patt" id="image-marker">
-        <a-box position="0 0.5 0" material="color: red;"></a-box>
-      </a-marker>
-      <a-entity camera></a-entity>
-    </a-scene>
-
     <script>
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/BuildOutput.loader.js";
@@ -59,11 +38,6 @@
         companyName: "DefaultCompany",
         productName: "DePantherWebXRTest",
         productVersion: "0.1.0",
-        // Enable alpha in context config
-        webglContextAttributes: {
-          alpha: true,
-          preserveDrawingBuffer: true
-        }
       };
 
       var container = document.querySelector("#unity-container");
@@ -73,6 +47,7 @@
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var unityInstance = null;
+      
 
       canvasContainer.style.width = "960px";
       canvasContainer.style.height = "600px";
@@ -86,20 +61,12 @@
         }).then((instance) => {
           unityInstance = instance;
           loadingBar.style.display = "none";
-          if (fullscreenButton) {
+          if (fullscreenButton)
+          {
             fullscreenButton.onclick = () => {
               unityInstance.SetFullscreen(1);
             };
           }
-
-        //Notify Unity when the marker is detected
-        const marker = document.querySelector("#image-marker");
-        marker.addEventListener("markerFound", () => {
-          if (unityInstance) {
-            unityInstance.SendMessage("CubeManager", "OnImageDetected", "Test");
-          }
-        });
-
         }).catch((message) => {
           alert(message);
         });
@@ -117,17 +84,11 @@
       }, false);
 
       enterARButton.addEventListener('click', function (event) {
-        navigator.mediaDevices.getUserMedia({ video: true })
-          .then(stream => {
-          })
-          .catch(err => {
-            alert('Camera permission is required for AR. Error: ' + err.message);
-           });
+        unityInstance.Module.WebXR.toggleAR();
       }, false);
-
-    enterVRButton.addEventListener('click', function (event) {
-    unityInstance.Module.WebXR.toggleVR();
-    }, false);
-   </script>
+      enterVRButton.addEventListener('click', function (event) {
+        unityInstance.Module.WebXR.toggleVR();
+      }, false);
+    </script>
   </body>
 </html>
