--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BuildOutput.loader.js";
+      var loaderUrl = buildUrl + "/UnityWebARTest.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BuildOutput.data",
-        frameworkUrl: buildUrl + "/BuildOutput.framework.js",
-        codeUrl: buildUrl + "/BuildOutput.wasm",
+        dataUrl: buildUrl + "/UnityWebARTest.data",
+        frameworkUrl: buildUrl + "/UnityWebARTest.framework.js",
+        codeUrl: buildUrl + "/UnityWebARTest.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "DePantherWebXRTest",
