--- a/index.html
+++ b/index.html
@@ -1,123 +1,166 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | DePantherWebXRTest</title>
-    <meta name="description" content="">
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-    <div id="unity-container">
-      <div id="unity-canvas-container">
-        <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
-      </div>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <button id="entervr" value="Enter VR" disabled>VR</button>
-        <button id="enterar" value="Enter AR" disabled>AR</button>
-        <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
-        <div id="unity-build-title">DePantherWebXRTest</div>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Unity WebGL Player | DePantherWebXRTest</title>
+  <meta name="description" content="" />
+  <link rel="shortcut icon" href="TemplateData/favicon.ico" />
+  <link rel="stylesheet" href="TemplateData/style.css" />
+
+  <!-- Load A-Frame + AR.js FIRST to avoid buffer error -->
+  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ar.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: transparent;
+      width: 100%;
+      height: 100%;
+    }
+    canvas#unity-canvas {
+      background-color: transparent !important;
+    }
+    a-scene {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 0;
+    }
+    #unity-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 1;
+      pointer-events: none;
+    }
+    #unity-footer {
+      position: fixed;
+      bottom: 10px;
+      left: 10px;
+      z-index: 10;
+      pointer-events: auto;
+    }
+  </style>
+</head>
+<body>
+  <div id="unity-container">
+    <div id="unity-canvas-container">
+      <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
+    </div>
+    <div id="unity-loading-bar">
+      <div id="unity-logo"></div>
+      <div id="unity-progress-bar-empty">
+        <div id="unity-progress-bar-full"></div>
       </div>
     </div>
-    <!-- AR.js scene with image marker -->
-    <a-scene embedded arjs>
-      <a-marker id="image-marker" type="pattern" url="marker.patt">
-        <!-- Optional 3D element -->
-        <a-box position="0 0.5 0" material="color: red;"></a-box>
-      </a-marker>
+    <div id="unity-footer">
+      <div id="unity-webgl-logo"></div>
+      <button id="entervr" value="Enter VR" disabled>VR</button>
+      <button id="enterar" value="Enter AR" disabled>AR</button>
+      <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank">WebXR Export</a></div>
+      <div id="unity-build-title">DePantherWebXRTest</div>
+    </div>
+  </div>
+
+  <!-- AR.js Scene -->
+  <a-scene embedded arjs>
+    <a-marker id="image-marker" type="pattern" url="marker.patt">
+      <a-box position="0 0.5 0" material="color: red;"></a-box>
+    </a-marker>
     <a-entity camera></a-entity>
-    </a-scene>
-    <script>
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/UnityWebARTest.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/UnityWebARTest.data",
-        frameworkUrl: buildUrl + "/UnityWebARTest.framework.js",
-        codeUrl: buildUrl + "/UnityWebARTest.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "DePantherWebXRTest",
-        productVersion: "0.1.0",
-      };
+  </a-scene>
 
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var canvasContainer = document.querySelector("#unity-canvas-container");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var unityInstance = null;
-      
+  <script>
+    var buildUrl = "Build";
+    var loaderUrl = buildUrl + "/UnityWebARTest.loader.js";
+    var config = {
+      dataUrl: buildUrl + "/UnityWebARTest.data",
+      frameworkUrl: buildUrl + "/UnityWebARTest.framework.js",
+      codeUrl: buildUrl + "/UnityWebARTest.wasm",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "DePantherWebXRTest",
+      productVersion: "0.1.0",
+      webglContextAttributes: {
+        alpha: true,
+        preserveDrawingBuffer: true
+      }
+    };
 
-      canvasContainer.style.width = "960px";
-      canvasContainer.style.height = "600px";
-      loadingBar.style.display = "block";
+    var container = document.querySelector("#unity-container");
+    var canvas = document.querySelector("#unity-canvas");
+    var canvasContainer = document.querySelector("#unity-canvas-container");
+    var loadingBar = document.querySelector("#unity-loading-bar");
+    var progressBarFull = document.querySelector("#unity-progress-bar-full");
+    var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+    var unityInstance = null;
+    var unityReady = false;
 
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((instance) => {
-          // Notify Unity when marker is found or lost
-          unityInstance = instance;
-          unityReady = true;
-          loadingBar.style.display = "none";
-          const marker = document.querySelector("#image-marker");
-          let markerAlreadyDetected = false;
+    canvasContainer.style.width = "960px";
+    canvasContainer.style.height = "600px";
+    loadingBar.style.display = "block";
 
-          marker.addEventListener("markerFound", () => {
-            if (unityReady && !markerAlreadyDetected) {
-              markerAlreadyDetected = true;
-              unityInstance.SendMessage("CubeManager", "OnImageDetected", "Test");
-            }
-          });
+    var script = document.createElement("script");
+    script.src = loaderUrl;
+    script.onload = () => {
+      createUnityInstance(canvas, config, (progress) => {
+        progressBarFull.style.width = 100 * progress + "%";
+      }).then((instance) => {
+        unityInstance = instance;
+        unityReady = true;
+        loadingBar.style.display = "none";
 
-          marker.addEventListener("markerLost", () => {
-            if (unityReady && markerAlreadyDetected) {
-              markerAlreadyDetected = false;
-              unityInstance.SendMessage("CubeManager", "OnImageLost", "Test");
-            }
-          });
-          if (fullscreenButton)
-          {
-            fullscreenButton.onclick = () => {
-              unityInstance.SetFullscreen(1);
-            };
+        const marker = document.querySelector("#image-marker");
+        let markerAlreadyDetected = false;
+        marker.addEventListener("markerFound", () => {
+          if (unityReady && !markerAlreadyDetected) {
+            markerAlreadyDetected = true;
+            unityInstance.SendMessage("CubeManager", "OnImageDetected", "Test");
           }
-        }).catch((message) => {
-          alert(message);
         });
-      };
-      document.body.appendChild(script);
 
-      let enterARButton = document.getElementById('enterar');
-      let enterVRButton = document.getElementById('entervr');
+        marker.addEventListener("markerLost", () => {
+          if (unityReady && markerAlreadyDetected) {
+            markerAlreadyDetected = false;
+            unityInstance.SendMessage("CubeManager", "OnImageLost", "Test");
+          }
+        });
 
-      document.addEventListener('onARSupportedCheck', function (event) {
-        enterARButton.disabled = !event.detail.supported;
-      }, false);
-      document.addEventListener('onVRSupportedCheck', function (event) {
-        enterVRButton.disabled = !event.detail.supported;
-      }, false);
+        if (fullscreenButton) {
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
+        }
+      }).catch((message) => {
+        alert(message);
+      });
+    };
+    document.body.appendChild(script);
 
-      enterARButton.addEventListener('click', function (event) {
-        unityInstance.Module.WebXR.toggleAR();
-      }, false);
-      enterVRButton.addEventListener('click', function (event) {
-        unityInstance.Module.WebXR.toggleVR();
-      }, false);
-    </script>
-    <!-- Load A-Frame + AR.js in the head for earlier availability -->
-    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/2.0.1/aframe/build/aframe-ar.min.js"></script>
-  </body>
+    let enterARButton = document.getElementById('enterar');
+    let enterVRButton = document.getElementById('entervr');
+
+    document.addEventListener('onARSupportedCheck', function (event) {
+      enterARButton.disabled = !event.detail.supported;
+    }, false);
+    document.addEventListener('onVRSupportedCheck', function (event) {
+      enterVRButton.disabled = !event.detail.supported;
+    }, false);
+
+    enterARButton.addEventListener('click', function () {
+      unityInstance.Module.WebXR.toggleAR();
+    }, false);
+    enterVRButton.addEventListener('click', function () {
+      unityInstance.Module.WebXR.toggleVR();
+    }, false);
+  </script>
+</body>
 </html>
