--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/ar.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
 
-  <style>
+  <!-- <style>
     html, body {
       margin: 0;
       padding: 0;
@@ -48,7 +48,7 @@
       z-index: 10;
       pointer-events: auto;
     }
-  </style>
+  </style> -->
 </head>
 <body>
   <div id="unity-container">
