--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <!-- AR.js Scene -->
   <a-scene embedded arjs>
-    <a-marker id="image-marker" type="pattern" url="marker.patt">
+    <a-marker id="image-marker" type="pattern" url="markers/pattern-Test.patt">
       <a-box position="0 0.5 0" material="color: red;"></a-box>
     </a-marker>
     <a-entity camera></a-entity>
@@ -123,14 +123,14 @@
         marker.addEventListener("markerFound", () => {
           if (unityReady && !markerAlreadyDetected) {
             markerAlreadyDetected = true;
-            unityInstance.SendMessage("CubeManager", "OnImageDetected", "Test");
+            unityInstance.SendMessage("CubeManager", "OnImageDetected", "pattern-Test");
           }
         });
 
         marker.addEventListener("markerLost", () => {
           if (unityReady && markerAlreadyDetected) {
             markerAlreadyDetected = false;
-            unityInstance.SendMessage("CubeManager", "OnImageLost", "Test");
+            unityInstance.SendMessage("CubeManager", "OnImageLost", "pattern-Test");
           }
         });
 
