--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </style> -->
 </head>
 <body>
-  <div id="unity-container">
+  <!-- <div id="unity-container">
     <div id="unity-canvas-container">
       <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
     </div>
@@ -68,7 +68,7 @@
       <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank">WebXR Export</a></div>
       <div id="unity-build-title">DePantherWebXRTest</div>
     </div>
-  </div>
+  </div> -->
 
   <!-- AR.js Scene -->
   <a-scene embedded arjs>
