--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <!-- Load A-Frame + AR.js FIRST to avoid buffer error -->
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/ar.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
-
+  <style>
+  #unity-container {
+    display: none !important;
+  }
+  </style>
   <!-- <style>
     html, body {
       margin: 0;
@@ -51,7 +55,7 @@
   </style> -->
 </head>
 <body>
-  <!-- <div id="unity-container">
+  <div id="unity-container">
     <div id="unity-canvas-container">
       <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
     </div>
@@ -68,7 +72,7 @@
       <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank">WebXR Export</a></div>
       <div id="unity-build-title">DePantherWebXRTest</div>
     </div>
-  </div> -->
+  </div>
 
   <!-- AR.js Scene -->
   <a-scene embedded arjs>
