--- a/index.html
+++ b/index.html
@@ -3,58 +3,34 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Unity WebGL Player | DePantherWebXRTest</title>
+  <title>AR.js Test | Marker Tracking Only</title>
   <meta name="description" content="" />
-  <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-  <link rel="stylesheet" href="TemplateData/style.css" />
 
-  <!-- Load A-Frame + AR.js FIRST to avoid buffer error -->
+  <!-- Load A-Frame + AR.js -->
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/ar.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
+
   <style>
-  #unity-container {
-    display: none !important;
-  }
-  </style>
-  <!-- <style>
     html, body {
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: transparent;
       width: 100%;
       height: 100%;
     }
-    canvas#unity-canvas {
-      background-color: transparent !important;
-    }
     a-scene {
+      width: 100vw;
+      height: 100vh;
       position: fixed;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 0;
     }
-    #unity-container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 1;
-      pointer-events: none;
-    }
-    #unity-footer {
-      position: fixed;
-      bottom: 10px;
-      left: 10px;
-      z-index: 10;
-      pointer-events: auto;
-    }
-  </style> -->
+  </style>
 </head>
 <body>
+
+  <!-- Unity WebGL (commented out) -->
+  <!--
   <div id="unity-container">
     <div id="unity-canvas-container">
       <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
@@ -73,6 +49,7 @@
       <div id="unity-build-title">DePantherWebXRTest</div>
     </div>
   </div>
+  -->
 
   <!-- AR.js Scene -->
   <a-scene embedded arjs>
@@ -82,6 +59,8 @@
     <a-entity camera></a-entity>
   </a-scene>
 
+  <!-- Unity loader + WebXR (commented out) -->
+  <!--
   <script>
     var buildUrl = "Build";
     var loaderUrl = buildUrl + "/UnityWebARTest.loader.js";
@@ -166,5 +145,7 @@
       unityInstance.Module.WebXR.toggleVR();
     }, false);
   </script>
+  -->
+
 </body>
 </html>
