--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <!-- AR.js Scene -->
   <a-scene embedded arjs>
-    <a-marker id="image-marker" type="pattern" url="markers/pattern-Test.patt">
+    <a-marker id="image-marker" type="pattern" url="pattern-Test.patt">
       <a-box position="0 0.5 0" material="color: red;"></a-box>
     </a-marker>
     <a-entity camera></a-entity>
