--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
   <!-- AR.js Scene -->
   <a-scene embedded arjs>
-    <a-marker id="image-marker" type="pattern" url="https://testunitywebar.github.io/UnityWebARTest/markers/pattern-Test.patt">
+    <!-- <a-marker id="image-marker" type="pattern" url="https://testunitywebar.github.io/UnityWebARTest/markers/pattern-Test.patt">
       <a-box position="0 0.5 0" material="color: red;"></a-box>
-    </a-marker>
+    </a-marker> -->
   
     <a-marker preset="hiro">
       <a-box position="0 0.5 0" material="color: red;"></a-box>
