--- a/index.html
+++ b/index.html
@@ -5,55 +5,18 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Unity WebGL Player | DePantherWebXRTest</title>
   <meta name="description" content="" />
-  <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-  <link rel="stylesheet" href="TemplateData/style.css" />
+  <!-- <link rel="shortcut icon" href="TemplateData/favicon.ico" />
+  <link rel="stylesheet" href="TemplateData/style.css" /> -->
 
   <!-- Load A-Frame -->
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
   <!-- Load AR.js for A-Frame -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js"></script>
-
-
-  <!-- <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background-color: transparent;
-      width: 100%;
-      height: 100%;
-    }
-    canvas#unity-canvas {
-      background-color: transparent !important;
-    }
-    a-scene {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 0;
-    }
-    #unity-container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 1;
-      pointer-events: none;
-    }
-    #unity-footer {
-      position: fixed;
-      bottom: 10px;
-      left: 10px;
-      z-index: 10;
-      pointer-events: auto;
-    }
-  </style> -->
 </head>
 <body>
+
+  <!-- UNITY CONTAINER (FULLY COMMENTED OUT)
   <div id="unity-container">
     <div id="unity-canvas-container">
       <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
@@ -72,6 +35,7 @@
       <div id="unity-build-title">DePantherWebXRTest</div>
     </div>
   </div>
+  -->
 
   <!-- AR.js Scene -->
   <a-scene embedded arjs>
@@ -81,6 +45,7 @@
     <a-entity camera></a-entity>
   </a-scene>
 
+  <!-- UNITY SCRIPT BLOCK (FULLY COMMENTED OUT)
   <script>
     var buildUrl = "Build";
     var loaderUrl = buildUrl + "/UnityWebARTest.loader.js";
@@ -165,5 +130,7 @@
       unityInstance.Module.WebXR.toggleVR();
     }, false);
   </script>
+  -->
+
 </body>
 </html>
