--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       </div>
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
-        <button id="entervr" value="Enter VR" disabled>VR</button>
-        <button id="enterar" value="Enter AR" disabled>AR</button>
+        <!-- <button id="entervr" value="Enter VR" disabled>VR</button>
+        <button id="enterar" value="Enter AR" disabled>AR</button> -->
         <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
-        <div id="unity-build-title">{{{ PRODUCT_NAME }}}</div>
+        <!-- <div id="unity-build-title">{{{ PRODUCT_NAME }}}</div> -->
       </div>
     </div>
   <!-- AR.js & A-Frame -->
@@ -78,7 +78,6 @@
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var unityInstance = null;
-      {{{ WEBXR_POLYFILL_CONFIG }}}
 
       canvasContainer.style.width = "{{{ WIDTH }}}px";
       canvasContainer.style.height = "{{{ HEIGHT }}}px"
