--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
   <a-scene
     vr-mode-ui="enabled: false"
-    renderer="logarithmicDepthBuffer: true"
     embedded
     arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+    renderer="antialias: true; precision: mediump; logarithmicDepthBuffer: false;"
     style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0;">
     
       <!-- Marker or NFT here -->
