--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var unityInstance = null;
 
-      canvasContainer.style.width = "100px";
-      canvasContainer.style.height = "100px"
+      // canvasContainer.style.width = "100px";
+      // canvasContainer.style.height = "100px"
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
