--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
+  <style>
+    #unity-container{
+      width: 960px;
+      height: 600px;
+      margin: auto;
+      position: relative;
+      z-index: 1;
+    }
+    canvas#unity-canvas{
+      width: 960px;
+      height: 600px;
+      background-color: transparent !important;
+    }
+  </style>
   <body>
     <div id="unity-container">
       <div id="unity-canvas-container" style="position: absolute; top: 0; left: 0; z-index: 1; width: 100%; height: 100%;">
@@ -35,8 +49,8 @@
     vr-mode-ui="enabled: false"
     embedded
     arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-    renderer="antialias: true; precision: mediump; logarithmicDepthBuffer: false;"
-    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0;">
+    renderer="precision: mediump; logarithmicDepthBuffer: false;"
+    style="width: 960px; height: 960px;">
     
       <!-- Marker or NFT here -->
     <a-nft
@@ -79,8 +93,8 @@
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var unityInstance = null;
 
-      // canvasContainer.style.width = "100px";
-      // canvasContainer.style.height = "100px"
+      canvasContainer.style.width = "960px";
+      canvasContainer.style.height = "600px"
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
