--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <meta name="viewport" content="width=960, height=600, initial-scale=1.0, user-scalable=no">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -50,7 +51,7 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
     renderer="precision: mediump; logarithmicDepthBuffer: false;"
-    style="width: 960px; height: 960px;">
+    style="width: 960px; height: 600px;">
     
       <!-- Marker or NFT here -->
     <a-nft
