--- a/nft-test.html
+++ b/nft-test.html
@@ -16,12 +16,12 @@
       
       <a-nft
         type="nft"
-        url="Descriptors/Test"
+        url="descriptors/test"
         smooth="true"
         smoothCount="10"
         smoothTolerance="0.01"
         smoothThreshold="5">
-        <a-box position="0 0.5 0" material="color: red;"></a-box>
+        <a-box position="0 0.5 0" material="color: yellow;"></a-box>
       </a-nft>
 
       <a-entity camera></a-entity>
