--- a/nft-test.html
+++ b/nft-test.html
@@ -16,7 +16,7 @@
       
       <a-nft
         type="nft"
-        url="descriptors/test"
+        url="Descriptors/test2"
         smooth="true"
         smoothCount="10"
         smoothTolerance="0.01"
