--- a/nft-test.html
+++ b/nft-test.html
@@ -21,7 +21,8 @@
         smoothCount="10"
         smoothTolerance="0.01"
         smoothThreshold="5">
-        <a-box position="0 0.5 0" material="color: yellow;"></a-box>
+        <a-light type="ambient" intensity="1"></a-light>
+        <a-box position="0 0 0" scale="1 1 1" color="red"></a-box>
       </a-nft>
 
       <a-entity camera></a-entity>
