--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/UnityWebARTest.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Build.data.br",
-        frameworkUrl: buildUrl + "/Build.framework.js.br",
-        codeUrl: buildUrl + "/Build.wasm.br",
+        dataUrl: buildUrl + "/UnityWebARTest.data.br",
+        frameworkUrl: buildUrl + "/UnityWebARTest.framework.js.br",
+        codeUrl: buildUrl + "/UnityWebARTest.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UnityWebARProject",
