--- a/index.html
+++ b/index.html
@@ -187,32 +187,50 @@
     </script>
     <!-- JS Bridge from AR.js to Unity -->
     <script>
-    AFRAME.registerComponent('sync-to-unity', {
-    tick: function () {
-      const marker = document.querySelector('#marker');
-      if (!marker || !marker.object3D.visible || typeof unityInstance === 'undefined') return;
+      // 1) Make unityInstance available globally
+      let unityInstance;
 
-      const pos = marker.object3D.position;
-      const quat = marker.object3D.quaternion;
+      createUnityInstance(canvas, config, (progress) => {
+        document.querySelector("#unity-progress-bar-full")
+                .style.width = 100 * progress + "%";
+      }).then((instance) => {
+        unityInstance = instance;                    // ← assign here
+        document.querySelector("#unity-loading-bar")
+                .style.display = "none";
+        document.querySelector("#unity-fullscreen-button")
+                .onclick = () => instance.SetFullscreen(1);
+      }).catch(console.error);
 
-      const jsonString = JSON.stringify({
-        position: { x: pos.x, y: pos.y, z: pos.z },
-        rotation: {
-          x: quat.x,
-          y: quat.y,
-          z: quat.z,
-          w: quat.w
+      // 2) Grab the marker once
+      const marker = document.getElementById("marker");
+
+      // 3) Helpers to send pose & tracking state
+      function sendPose() {
+        if (!unityInstance || !marker.object3D.visible) return;
+        const { position: p, quaternion: q } = marker.object3D;
+        unityInstance.SendMessage(
+          "CubeSpawner",
+          "UpdateTransformData",
+          JSON.stringify({
+            position: { x: p.x, y: p.y, z: p.z },
+            rotation: { x: q.x, y: q.y, z: q.z, w: q.w }
+          })
+        );
+      }
+
+      function sendState(v) {
+        if (unityInstance) {
+          unityInstance.SendMessage("CubeSpawner", "SetTracking", v);
         }
+      }
+
+      // 4) Wire up AR.js events instead of tick polling
+      marker.addEventListener("markerFound", () => {
+        sendState(1);
+        sendPose();
       });
-
-      unityInstance.SendMessage('CubeSpawner', 'UpdateTransformData', jsonString);
-    }
-  });
-
-  document.addEventListener("DOMContentLoaded", () => {
-    document.querySelector('a-scene').setAttribute('sync-to-unity', '');
-  });
-</script>
-
+      marker.addEventListener("markerLost", () => sendState(0));
+      marker.addEventListener("componentchanged", sendPose);
+    </script>
   </body>
 </html>
