--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
       var loaderUrl = buildUrl + "/UnityWebARTest.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/UnityWebARTest.data.br",
-        frameworkUrl: buildUrl + "/UnityWebARTest.framework.js.br",
-        codeUrl: buildUrl + "/UnityWebARTest.wasm.br",
+        dataUrl: buildUrl + "/UnityWebARTest.data",
+        frameworkUrl: buildUrl + "/UnityWebARTest.framework.js",
+        codeUrl: buildUrl + "/UnityWebARTest.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UnityWebARProject",
