--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       html, body {
         margin: 0;
         overflow: hidden;
-        background: transparent;
+        background: transparent !important;
       }
       #unity-container, #unity-canvas {
         position: absolute;
