--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
         const { position: p, quaternion: q } = marker.object3D;
         unityInstance.SendMessage(
           "CubeSpawner",
+          "ARObject",
           "UpdateTransformData",
           JSON.stringify({
             position: { x: p.x, y: p.y, z: p.z },
