--- a/index.html
+++ b/index.html
@@ -119,6 +119,48 @@
         }
       };
 
+      const loader = document.createElement("script");
+      loader.src = loaderUrl;
+      loader.onload = () => {
+        // 2) only once that’s in, boot Unity
+        createUnityInstance(canvas, config, (progress) => {
+          document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
+        }).then((unityInstance) => {
+
+          // 3) now you have a real instance
+          window.unityInstance = unityInstance;
+          document.querySelector("#unity-loading-bar").style.display = "none";
+
+          // grab your marker
+          const marker = document.getElementById("marker");
+
+          // helper to update pose on your ARObject
+          function sendPose() {
+            if (!marker.object3D.visible) return;
+            const { position: p, quaternion: q } = marker.object3D;
+            const payload = [p.x, p.y, p.z, q.x, q.y, q.z].join(",");
+            unityInstance.SendMessage("ARObject","UpdateFromJS",payload);
+          }
+
+          // helper to turn the spawner on/off
+          function sendState(v) {
+            unityInstance.SendMessage("CubeSpawner","SetTracking",v);
+          }
+
+          // 4) hook all your AR.js events
+          marker.addEventListener("markerFound", () => {
+            sendState(1);
+            sendPose();
+            //spawn the cube!
+            unityInstance.SendMessage("CubeSpawner","SpawnCube");
+          });
+          marker.addEventListener("markerLost", () => sendState(0));
+          marker.addEventListener("componentchanged", sendPose);
+
+        }).catch(err => console.error(err));
+      };
+      document.body.appendChild(loader);
+
       // By default, Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
       // Set this to false if you want to decouple this synchronization from
@@ -186,7 +228,7 @@
 
     </script>
     <!-- JS Bridge from AR.js to Unity -->
-    <script>
+    <!-- <script>
       // 1) Make unityInstance available globally
       let unityInstance;
 
@@ -235,6 +277,6 @@
       });
       marker.addEventListener("markerLost", () => sendState(0));
       marker.addEventListener("componentchanged", sendPose);
-    </script>
+    </script> -->
   </body>
 </html>
